atualização no caminho da caixa de seleção

--- a/cruzadinha_Rayane_Sophia.html
+++ b/cruzadinha_Rayane_Sophia.html
@@ -22,18 +22,18 @@
       <option value="4">4</option>
       <option value="5">5</option>
       <option value="6">6</option>
-      <option value="5">7</option>
-      <option value="6">8</option>
-      <option value="7">9</option>
-      <option value="8">10</option>
-      <option value="9">11</option>
-      <option value="10">12</option>
-      <option value="11">13</option>
-      <option value="12">14</option>
-      <option value="13">15</option>
-      <option value="14">16</option>
-      <option value="15">17</option>
-      <option value="16">18</option>
+      <option value="7">7</option>
+      <option value="8">8</option>
+      <option value="9">9</option>
+      <option value="10">10</option>
+      <option value="11">11</option>
+      <option value="12">12</option>
+      <option value="13">13</option>
+      <option value="14">14</option>
+      <option value="15">15</option>
+      <option value="16">16</option>
+      <option value="17">17</option>
+      <option value="18">18</option>
     </select><br>
   </div>
 
@@ -769,8 +769,7 @@
                 <p>  7- O componente recebe um determinado volume de dados em um padrão binário e tem a função de responder <br> a
         esse volume processando a informação com base em instruções armazenadas em sua memória interna<br><br>`;
         } else if (selectElement.value === '8') {
-          Lista_dicasElement.innerHTML = `
-          8- Implementa as operações lógicas (NOT, AND, OR, XOR) e aritméticas <br>geralmente adição, subtração,
+          Lista_dicasElement.innerHTML = `8- Implementa as operações lógicas (NOT, AND, OR, XOR) e aritméticas <br>geralmente adição, subtração,
         multiplicação, divisão<br><br>`;
         } else if (selectElement.value === '9') {
           Lista_dicasElement.innerHTML = `
@@ -815,7 +814,7 @@
           Lista_dicasElement.innerHTML = `
           17- é uma tecnologia de armazenamento de dados que usa uma memória não volátil`;
         }
-        else if (selectElement.value === '17') {
+        else if (selectElement.value === '18') {
           Lista_dicasElement.innerHTML = `
           18-É uma espécie de biblioteca que existe dentro de computadores e dispositivos móveis`;
         }
