inserindo os numeros

--- a/cruzadinha_Rayane_Sophia.html
+++ b/cruzadinha_Rayane_Sophia.html
@@ -35,9 +35,34 @@
   </div>
 <div class="tabela">
   <table>
+    <!-- // linha para o numero  -->
+    <tr>
+      <td class="vazio" id=""></td>
+      <td class="vazio" id="">1</td>
+      <td class="vazio" id=""></td>
+      <td class="vazio" id="">2</td>
+      <td class="vazio" id=""></td>
+      <td class="vazio" id=""></td>
+      <td class="vazio" id=""></td>
+      <td class="vazio" id=""></td>
+      <td class="vazio" id=""></td>
+      <td class="vazio" id=""></td>
+      <td class="vazio" id=""></td>
+      <td class="vazio" id=""></td>
+      <td class="vazio" id=""></td>
+      <td class="vazio" id=""></td>
+      <td class="vazio" id=""></td>
+      <td class="vazio" id=""></td>
+      <td class="vazio" id=""></td>
+      <td class="vazio" id=""></td>
+      <td class="vazio" id=""></td>
+      <td class="vazio" id=""></td>
+      <td class="vazio" id=""></td>
+    </tr>
+
     <!-- PRIMEIRA LINHA -->
     <tr>
-      <td class="vazio" id="">1</td>
+      <td class="vazio" id="">3</td>
       <td id="ram_r"></td>
       <td id="ram_a"></td>
       <td id="ram_m"></td>
@@ -61,9 +86,9 @@
     </tr>
     <tr>
       <!-- SEGUNDA LINHA -->
-      <td class="vazio" id=""></td>
+      <td class="vazio" id="">4</td>
       <td id="rom_o"></td>
-      <td class="vazio" id=""></td>
+      <td class="vazio" id="">5</td>
       <td id="memoria_e"></td>
       <td id="eprom_p"></td>
       <td id="eprom_r"></td>
@@ -93,7 +118,7 @@
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
+      <td class="vazio" id="">6</td>
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
@@ -138,7 +163,7 @@
       <td class="vazio" id=""></td>
       <td id="memoria_r"></td>
       <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
+      <td class="vazio" id="">7</td>
       <td id="cpu_c"></td>
       <td id="cpu_p"></td>
       <td id="quad_core_u"></td>
@@ -150,7 +175,7 @@
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
+      <td class="vazio" id="">8</td>
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
@@ -159,12 +184,12 @@
       <!-- QUINTA LINHA -->
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
+      <td class="vazio" id="">9</td>
       <td id="memoria_i"></td>
       <td id="i5_5"></td>
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
+      <td class="vazio" id="">10</td>
       <td id="address_bus_a"></td>
       <td id="address_bus_d"></td>
       <td id="address_bus_dd"></td>
@@ -182,7 +207,7 @@
     <tr>
       <!-- LINHA 6 -->
       <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
+      <td class="vazio" id="">11</td>
       <td class="vazio" id=""></td>
       <td id="memoria_a"></td>
       <td class="vazio" id=""></td>
@@ -223,7 +248,7 @@
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
       <td id="ula_a"></td>
-      <td class="vazio" id=""></td>
+      <td class="vazio" id="">12</td>
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
     </tr>
@@ -231,7 +256,7 @@
       <!-- LINHA 8 -->
       <td class="vazio" id=""></td>
       <td id="chip_h"></td>
-      <td class="vazio" id=""></td>
+      <td class="vazio" id="">13</td>
       <td id="memoria_d"></td>
       <td id="dual_core_u"></td>
       <td id="dual_core_a"></td>
@@ -264,7 +289,7 @@
       <td id="quad_core_o"></td>
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
+      <td class="vazio" id="">14</td>
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
@@ -284,7 +309,7 @@
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
+      <td class="vazio" id="">15</td>
       <td id="registradores_r"></td>
       <td id="registradores_e"></td>
       <td id="registradores_g"></td>
@@ -335,7 +360,7 @@
       <td id="data_bus_b"></td>
       <td id="data_bus_u"></td>
       <td id="data_bus_s"></td>
-      <td class="vazio" id=""></td>
+      <td class="vazio" id="">16</td>
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
@@ -378,7 +403,7 @@
       <td id="flash_a"></td>
       <td id="memoria_ss"></td>
       <td id="flash_h"></td>
-      <td class="vazio" id=""></td>
+      <td class="vazio" id="">17</td>
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
@@ -399,8 +424,11 @@
       <!-- LINHA 15 -->
       <td class="vazio" id=""></td>
       <td id="select_ee"></td>
-      <td id="cache_c"></td>
+      <td class="vazio" id=""></td>
       <td id="memoria_massa_aa"></td>
+      <td class="vazio" id="">18</td>
+      <td id="cache_c"></td>
+      <td id="cache_a"></td>
       <td id="cache_cc"></td>
       <td id="cache_h"></td>
       <td id="cache_e"></td>
@@ -415,9 +443,7 @@
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
       <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
+    
     </tr>
     <tr>
       <!-- LINHA 16 -->
@@ -468,29 +494,8 @@
       <td class="vazio" id=""></td>
     </tr>
     <tr>
-      <!-- LINHA 18 -->
-      <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
-      <td class="vazio" id=""></td>
-    </tr>
+
+    
   </table>
   <div class="lista" id="Dicass" style="display: none;">
     <ul id="Lista_dicas"></ul>
